EA-182 - Update minimum OpenMRS version to 2.2.1 and consolidate legacy code
* Increase OpenMRS version requirement to 2.2.1 (minimum required by code in web-2.2)
* Update reporting module dependencies to reflect increased OpenMRS platform dependency
* Removed api-1.10 which was only loaded used for 1.10
* Removed api-1.11 which was only loaded used for 1.11
* Removed api-pre2.2, which was only loaded for versions < 2.2.0
* Removed fhir-condition, which was only loaded for versions 2.0-2.1
* Moved / consolidated code from api-1.12 and api-2.2 into api
* Moved / consolidated code from web-2.2 into omod
* Consolidated different versions of EmrOrderService, ObservationMapper, ObsBuilder, DrugMapper, OrderMapper that were only needed to support Order API differences between 1.9 and 2.2
* Update REST supported versions
* Removed provider name tests that are not supported in OpenMRS 2.2+
* Fix failing unit tests and upgraded for compatibility with 2.2+
* Removed/conslidated EmrVisitService in favor of DiagnosisService as all methods are diagnosis related
* Ignore out unit test that fails due to multi-threading and configuration
* Remove custom CareSettingType in favor of the core version